--- a/index.html
+++ b/index.html
@@ -11,14 +11,46 @@
     <title>CSS Bootstrap Freelancer</title>
 </head>
 <body>
-    <header class="container-fluid d-flex justify-content-between align-items-center">
-        <h1>Titolo</h1>
-        <i class="fs-1 bi bi-list cs-bi-list clickable d-md-none"></i>
+    <header class="text-uppercase container-fluid d-flex justify-content-between align-items-center">
+        <h1 class="fs-2 text-white">Titolo</h1>
+        <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none"></i>
         <ul class="m-0 d-none d-md-block">
-            <li class="list-inline-item text-uppercase"><a class=" text-white text-decoration-none" href="#">link-1</a></li>
-            <li class="list-inline-item text-uppercase"><a class=" text-white text-decoration-none" href="#">link-2</a></li>
-            <li class="list-inline-item text-uppercase"><a class=" text-white text-decoration-none" href="#">link-3</a></li>
+            <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-1</a></li>
+            <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-2</a></li>
+            <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-3</a></li>
         </ul>
     </header>
+    <main class="px-0 container-fluid">
+        <div class="">
+            <section class="start bg-green">
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem sequi cupiditate consequatur dolores facere quae reiciendis doloremque eligendi, architecto at aspernatur. Omnis doloremque, non vero dicta mollitia vel neque officiis.
+            </section>
+            <section class="portfolio">
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam saepe facilis vero sint dolor ullam cum ratione minus laboriosam fuga officia minima repudiandae earum ab animi nesciunt, magnam officiis itaque?
+            </section>
+            <section class="about bg-green">
+Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, veritatis distinctio sequi ullam nobis aspernatur corporis alias id harum possimus aperiam veniam, est eaque nisi, necessitatibus quas. Officiis, soluta illum.
+            </section>
+            <section class="contact">
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam minima nesciunt alias at, eveniet, quas ipsam voluptate, cupiditate voluptatum magnam officiis vero ex? Voluptate obcaecati ducimus repellat molestias, cumque nulla!
+            </section>
+        </div>
+    </main>
+    <footer class="container-fluid text-white px-0">
+        <section class="info bg-blue d-flex justify-content-center align-items-center">
+            <div class="row flex-column">
+                <div class="col">Testo-1</div>
+                <div class="col">Testo-2</div>
+                <div class="col">Testo-3</div>
+            </div>
+        </section>
+        <section class="copyright d-flex justify-content-center align-items-center">
+            <div class="row">
+                <div class="col">
+                    Testo a fondo pagina
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
