--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>CSS Bootstrap Freelancer</title>
 </head>
 <body>
-    <header class="text-uppercase container-fluid d-flex justify-content-between align-items-center">
+    <header class="text-uppercase container-fluid d-flex justify-content-between align-items-center justify-content-md-around">
         <h1 class="fs-2 text-white">Titolo</h1>
         <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none"></i>
         <ul class="m-0 d-none d-md-block">
@@ -38,7 +38,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam minima nesciun
     </main>
     <footer class="container-fluid text-white px-0">
         <section class="info bg-blue d-flex justify-content-center align-items-center">
-            <div class="row flex-column">
+            <div class="row flex-column flex-md-row">
                 <div class="col">Testo-1</div>
                 <div class="col">Testo-2</div>
                 <div class="col">Testo-3</div>
