added main and sections

--- a/index.html
+++ b/index.html
@@ -22,11 +22,27 @@
     </header>
     <main class="px-0 container-fluid">
         <div class="">
-            <section class="start bg-green">
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quidem sequi cupiditate consequatur dolores facere quae reiciendis doloremque eligendi, architecto at aspernatur. Omnis doloremque, non vero dicta mollitia vel neque officiis.
+            <section class="start bg-green d-flex flex-column  justify-content-center align-items-center text-center text-white">
+                <div class="row flex-column">
+                    <div class="col"><img src="" alt="pic"></div>
+                    <div class="col">testo</div>
+                    <div class="col">separatore con icona</div>
+                    <div class="col text-uppercase">
+                        <p>testo - testo - testo</p>
+                    </div>
+                </div>
             </section>
-            <section class="portfolio">
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Numquam saepe facilis vero sint dolor ullam cum ratione minus laboriosam fuga officia minima repudiandae earum ab animi nesciunt, magnam officiis itaque?
+            <section class="portfolio d-flex flex-column  justify-content-center align-items-center text-center">
+                <div class="row flex-column">
+                    <div class="col">testo</div>
+                    <div class="col">separatore con icona</div>
+                    <div class="col"><img src="" alt="pic"></div>
+                    <div class="col"><img src="" alt="pic"></div>
+                    <div class="col"><img src="" alt="pic"></div>
+                    <div class="col"><img src="" alt="pic"></div>
+                    <div class="col"><img src="" alt="pic"></div>
+                    <div class="col"><img src="" alt="pic"></div>
+                </div>
             </section>
             <section class="about bg-green">
 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, veritatis distinctio sequi ullam nobis aspernatur corporis alias id harum possimus aperiam veniam, est eaque nisi, necessitatibus quas. Officiis, soluta illum.
