add contact section

--- a/index.html
+++ b/index.html
@@ -22,33 +22,54 @@
     </header>
     <main class="px-0 container-fluid">
         <div class="">
-            <section class="start bg-green d-flex flex-column  justify-content-center align-items-center text-center text-white">
+            <section class="start bg-green d-flex flex-column  justify-content-center align-items-center text-center text-white py-4 text-uppercase">
                 <div class="row flex-column">
-                    <div class="col"><img src="" alt="pic"></div>
-                    <div class="col">testo</div>
-                    <div class="col">separatore con icona</div>
-                    <div class="col text-uppercase">
-                        <p>testo - testo - testo</p>
+                    <div class="col "><img src="" alt="pic"></div>
+                    <div class="col pt-2">testo</div>
+                    <div class="col py-2">separatore con icona</div>
+                    <div class="col">testo - testo - testo
                     </div>
                 </div>
             </section>
-            <section class="portfolio d-flex flex-column  justify-content-center align-items-center text-center">
+            <section class="portfolio d-flex flex-column text-center">
                 <div class="row flex-column">
-                    <div class="col">testo</div>
+                    <div class="col pt-4">testo</div>
                     <div class="col">separatore con icona</div>
-                    <div class="col"><img src="" alt="pic"></div>
-                    <div class="col"><img src="" alt="pic"></div>
-                    <div class="col"><img src="" alt="pic"></div>
-                    <div class="col"><img src="" alt="pic"></div>
-                    <div class="col"><img src="" alt="pic"></div>
-                    <div class="col"><img src="" alt="pic"></div>
+                </div>
+                <div class="row flex-column flex-md-row py-4">
+                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                    <div class="col-md-6 col-lg-4"><img src="" alt="pic"></div>
                 </div>
             </section>
-            <section class="about bg-green">
-Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam, veritatis distinctio sequi ullam nobis aspernatur corporis alias id harum possimus aperiam veniam, est eaque nisi, necessitatibus quas. Officiis, soluta illum.
+            <section class="about bg-green d-flex flex-column text-white py-4">
+                <div class="row flex-column text-center text-uppercase">
+                    <div class="col">testo</div>
+                    <div class="col py-3">separatore con icona</div>
+                </div>
+                <div class="row flex-column flex-md-row">
+                    <div class="col-6 offset-3 col-md-3 offset-md-3 col-lg-4 offset-lg-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolorum enim, harum eius perferendis eveniet voluptates, atque qui ipsa vitae omnis recusandae et aperiam unde vel quod illo nesciunt? Tempore?</div>
+                    <div class="col-6 offset-3 col-md-3 offset-md-0 col-lg-4 pt-4 pt-md-0">Dolorum cum exercitationem quaerat, id sequi quos dolorem eum explicabo nisi maiores ratione accusamus modi possimus molestias, delectus placeat reprehenderit deleniti velit?</div>
+                </div>
+                <div class="row text-center pt-4">
+                    <div class="col">download</div>
+                </div>
             </section>
             <section class="contact">
-Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam minima nesciunt alias at, eveniet, quas ipsam voluptate, cupiditate voluptatum magnam officiis vero ex? Voluptate obcaecati ducimus repellat molestias, cumque nulla!
+                <div class="row flex-column text-center py-4">
+                    <div class="col text-uppercase">testo</div>
+                    <div class="col py-3">separatore con icona</div>
+                </div>
+                <div class="row flex-column text-center pb-4">
+                    <div class="col-4 offset-2 offset-lg-1">testo</div>
+                    <div class="col-4 offset-2 offset-lg-1 py-1">testo</div>
+                    <div class="col-4 offset-2 offset-lg-1">testo</div>
+                    <div class="col-4 offset-2 offset-lg-1 pt-1">testo</div>
+                    <div class="col-4 offset-2 offset-lg-1 pt-5">send</div>
+                </div>
             </section>
         </div>
     </main>
@@ -62,9 +83,7 @@ Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam minima nesciun
         </section>
         <section class="copyright d-flex justify-content-center align-items-center">
             <div class="row">
-                <div class="col">
-                    Testo a fondo pagina
-                </div>
+                <div class="col">Testo a fondo pagina</div>
             </div>
         </section>
     </footer>
