add some responsive

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                     <div class="col text-uppercase">testo</div>
                     <div class="col py-3">separatore con icona</div>
                 </div>
-                <div class="row flex-column text-center pb-4">
-                    <div class="col-4 offset-2 offset-lg-1">testo</div>
-                    <div class="col-4 offset-2 offset-lg-1 py-1">testo</div>
-                    <div class="col-4 offset-2 offset-lg-1">testo</div>
-                    <div class="col-4 offset-2 offset-lg-1 pt-1">testo</div>
-                    <div class="col-4 offset-2 offset-lg-1 pt-5">send</div>
+                <div class="row flex-column pb-4">
+                    <div class="col-6 offset-3 col-md-8 offset-md-2">testo</div>
+                    <div class="col-6 offset-3 col-md-8 offset-md-2 py-1">testo</div>
+                    <div class="col-6 offset-3 col-md-8 offset-md-2">testo</div>
+                    <div class="col-6 offset-3 col-md-8 offset-md-2 pt-1">testo</div>
+                    <div class="col-6 offset-3 col-md-8 offset-md-2 pt-5">send</div>
                 </div>
             </section>
         </div>
