--- a/index.html
+++ b/index.html
@@ -1,91 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Laura Bigoni">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>CSS Bootstrap Freelancer</title>
 </head>
+
 <body>
-    <header class="text-uppercase container-fluid d-flex justify-content-between align-items-center justify-content-md-around">
-        <h1 class="fs-2 text-white">Titolo</h1>
-        <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none"></i>
-        <ul class="m-0 d-none d-md-block">
-            <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-1</a></li>
-            <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-2</a></li>
-            <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-3</a></li>
-        </ul>
+    <header>
+        <div
+            class="container h-100 text-uppercase d-flex justify-content-between align-items-center justify-content-md-around">
+            <h1 class="fs-2 text-white">Titolo</h1>
+            <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none"></i>
+            <ul class="m-0 d-none d-md-block">
+                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-1</a></li>
+                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-2</a></li>
+                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-3</a></li>
+            </ul>
+        </div>
     </header>
-    <main class="px-0 container-fluid">
-        <div class="">
-            <section class="start bg-green d-flex flex-column  justify-content-center align-items-center text-center text-white py-4 text-uppercase">
-                <div class="row flex-column">
-                    <div class="col "><img src="" alt="pic"></div>
-                    <div class="col pt-2">testo</div>
-                    <div class="col py-2">separatore con icona</div>
-                    <div class="col">testo - testo - testo
+    <section
+        class="jumbotron bg-green d-flex flex-column justify-content-center align-items-center text-center text-white py-4 text-uppercase">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col">
+                    <img src="" alt="pic">
+                    <div>testo</div>
+                    <div>separatore con icona</div>
+                    <div>testo - testo - testo</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="portfolio d-flex flex-column text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col pt-4">
+                    <div>testo </div>
+                    <div>separatore con icona</div>
+                </div>
+            </div>
+            <div class="row py-4">
+                <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
+                <div class="col-md-6 col-lg-4"><img src="" alt="pic"></div>
+            </div>
+        </div>
+    </section>
+    <section class="about bg-green text-white py-4">
+        <div class="cointainer">
+            <div class="row">
+                <div class="col text-uppercase text-center pb-4">
+                    <div>testo</div>
+                    <div>separatore con icona</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-8 offset-2 col-md-5 offset-md-1 offset-lg-2 col-lg-4">Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Earum dolorum enim, harum eius perferendis eveniet voluptates,
+                    atque
+                    qui ipsa vitae omnis recusandae et aperiam unde vel quod illo nesciunt? Tempore?</div>
+                <div class="col-8 offset-2 col-md-5 offset-md-0 col-lg-4 pt-4 pt-md-0">Dolorum cum exercitationem
+                    quaerat, id sequi quos dolorem eum explicabo nisi maiores ratione accusamus modi possimus
+                    molestias,
+                    delectus placeat reprehenderit deleniti velit?</div>
+            </div>
+            <div class="row text-center pt-4">
+                <div class="col">download</div>
+            </div>
+        </div>
+    </section>
+    <section class="contact">
+        <div class="container-fluid">
+            <div class="row text-center py-4">
+                <div class="col text-uppercase">
+                    <div>testo</div>
+                    <div class="py-3">separatore con icona</div>
+                </div>
+            </div>
+            <div class="row pb-4">
+                <div class="col col-md-10 offset-md-1 offset-lg-2 col-lg-8">
+                    <div>testo</div>
+                    <div>testo</div>
+                    <div>testo</div>
+                    <div>testo</div>
+                    <div>send</div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="container text-white">
+            <div class="footer-top bg-blue d-flex justify-content-center align-items-center">
+                <div class="row flex-md-row">
+                    <div class="col">
+                        <div>Testo-1</div>
+                        <div>Testo-2</div>
+                        <div>Testo-3</div>
                     </div>
                 </div>
-            </section>
-            <section class="portfolio d-flex flex-column text-center">
-                <div class="row flex-column">
-                    <div class="col pt-4">testo</div>
-                    <div class="col">separatore con icona</div>
+            </div>
+            <div class="footer-bottom d-flex justify-content-center align-items-center">
+                <div class="row">
+                    <div class="col">Testo a fondo pagina</div>
                 </div>
-                <div class="row flex-column flex-md-row py-4">
-                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
-                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
-                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
-                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
-                    <div class="col-md-6 col-lg-4 pb-2"><img src="" alt="pic"></div>
-                    <div class="col-md-6 col-lg-4"><img src="" alt="pic"></div>
-                </div>
-            </section>
-            <section class="about bg-green d-flex flex-column text-white py-4">
-                <div class="row flex-column text-center text-uppercase">
-                    <div class="col">testo</div>
-                    <div class="col py-3">separatore con icona</div>
-                </div>
-                <div class="row flex-column flex-md-row">
-                    <div class="col-6 offset-3 col-md-3 offset-md-3 col-lg-4 offset-lg-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum dolorum enim, harum eius perferendis eveniet voluptates, atque qui ipsa vitae omnis recusandae et aperiam unde vel quod illo nesciunt? Tempore?</div>
-                    <div class="col-6 offset-3 col-md-3 offset-md-0 col-lg-4 pt-4 pt-md-0">Dolorum cum exercitationem quaerat, id sequi quos dolorem eum explicabo nisi maiores ratione accusamus modi possimus molestias, delectus placeat reprehenderit deleniti velit?</div>
-                </div>
-                <div class="row text-center pt-4">
-                    <div class="col">download</div>
-                </div>
-            </section>
-            <section class="contact">
-                <div class="row flex-column text-center py-4">
-                    <div class="col text-uppercase">testo</div>
-                    <div class="col py-3">separatore con icona</div>
-                </div>
-                <div class="row flex-column pb-4">
-                    <div class="col-6 offset-3 col-md-8 offset-md-2">testo</div>
-                    <div class="col-6 offset-3 col-md-8 offset-md-2 py-1">testo</div>
-                    <div class="col-6 offset-3 col-md-8 offset-md-2">testo</div>
-                    <div class="col-6 offset-3 col-md-8 offset-md-2 pt-1">testo</div>
-                    <div class="col-6 offset-3 col-md-8 offset-md-2 pt-5">send</div>
-                </div>
-            </section>
+            </div>
         </div>
-    </main>
-    <footer class="container-fluid text-white px-0">
-        <section class="info bg-blue d-flex justify-content-center align-items-center">
-            <div class="row flex-column flex-md-row">
-                <div class="col">Testo-1</div>
-                <div class="col">Testo-2</div>
-                <div class="col">Testo-3</div>
-            </div>
-        </section>
-        <section class="copyright d-flex justify-content-center align-items-center">
-            <div class="row">
-                <div class="col">Testo a fondo pagina</div>
-            </div>
-        </section>
     </footer>
 </body>
+
 </html>
