--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
         </div>
     </section>
     <section class="about bg-green text-white py-4">
-        <div class="cointainer">
-            <div class="row">
-                <div class="col text-uppercase text-center pb-4">
+        <div class="container-fluid">
+            <div class="row pb-4">
+                <div class="col text-uppercase text-center ">
                     <div>testo</div>
                     <div>separatore con icona</div>
                 </div>
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="row pb-4">
-                <div class="col col-md-10 offset-md-1 offset-lg-2 col-lg-8">
+                <div class="col-8 offset-2 col-md-10 offset-md-1 offset-lg-2 col-lg-8">
                     <div>testo</div>
                     <div>testo</div>
                     <div>testo</div>
@@ -100,7 +100,7 @@
         </div>
     </section>
     <footer>
-        <div class="container text-white">
+        <div class="container-fluid text-white p-0">
             <div class="footer-top bg-blue d-flex justify-content-center align-items-center">
                 <div class="row flex-md-row">
                     <div class="col">
