--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>CSS Bootstrap Freelancer</title>
 </head>
 
@@ -18,7 +18,7 @@
         <div
             class="container h-100 text-uppercase d-flex justify-content-between align-items-center justify-content-md-around">
             <h1 class="fs-2 text-white">Titolo</h1>
-            <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none"></i>
+            <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none border border-secondary rounded"></i>
             <ul class="m-0 d-none d-md-block">
                 <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-1</a></li>
                 <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-2</a></li>
