--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 <body>
     <header>
         <div
-            class="container h-100 text-uppercase d-flex justify-content-between align-items-center justify-content-md-around">
-            <h1 class="fs-2 text-white">Titolo</h1>
+            class="container h-100 text-uppercase d-flex justify-content-between align-items-center justify-content-md-around fw-bold">
+            <h1 class="fs-2 text-white fw-bold">start bootstrap</h1>
             <i class="bi bi-list fs-1 cs-bi-list text-secondary clickable d-md-none border border-secondary rounded"></i>
             <ul class="m-0 d-none d-md-block">
-                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-1</a></li>
-                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-2</a></li>
-                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">link-3</a></li>
+                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">portfolio</a></li>
+                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">about</a></li>
+                <li class="list-inline-item"><a class=" text-white text-decoration-none" href="#">contact</a></li>
             </ul>
         </div>
     </header>
@@ -31,7 +31,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col">
-                    <img src="" alt="pic">
+                    <img class="avatar" src="img/avatar.svg" alt="profile pic">
                     <div>testo</div>
                     <div>separatore con icona</div>
                     <div>testo - testo - testo</div>
