--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
                     <div><i class="bi bi-dash-lg fs-1"></i> <i class="bi bi-star-fill fs-1"></i> <i class="bi bi-dash-lg fs-1"></i></div>
                 </div>
             </div>
-            <div class="row py-4">
-                <div class="col-md-6 col-lg-4 pb-4"><img src="img/cabin.png" alt="pic"></div>
-                <div class="col-md-6 col-lg-4 pb-4"><img src="img/cake.png" alt="pic"></div>
-                <div class="col-md-6 col-lg-4 pb-4"><img src="img/circus.png" alt="pic"></div>
-                <div class="col-md-6 col-lg-4 pb-4"><img src="img/game.png" alt="pic"></div>
-                <div class="col-md-6 col-lg-4 pb-4"><img src="img/safe.png" alt="pic"></div>
-                <div class="col-md-6 col-lg-4"><img src="img/submarine.png" alt="pic"></div>
+            <div class="row py-4 gy-4">
+                <div class="col-md-6 col-lg-4 image-fluid"><img src="img/cabin.png" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 image-fluid"><img src="img/cake.png" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 image-fluid"><img src="img/circus.png" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 image-fluid"><img src="img/game.png" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 image-fluid"><img src="img/safe.png" alt="pic"></div>
+                <div class="col-md-6 col-lg-4 image-fluid"><img src="img/submarine.png" alt="pic"></div>
             </div>
         </div>
     </section>
