corrected star divider

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="col">
                     <img class="avatar" src="img/avatar.svg" alt="profile pic">
                     <div class="fw-bold start">start bootstrap</div>
-                    <div><i class="bi bi-dash-lg fs-1"></i> <i class="bi bi-star-fill fs-1"></i> <i class="bi bi-dash-lg fs-1"></i></div>
+                    <div class="star-divider"><i class="bi bi-star-fill fs-1"></i></div>
                     <div class="qualification">graphic artist - web designer - illustrator</div>
                 </div>
             </div>
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col pt-4">
                     <div class="text-uppercase fs-3 fw-bold">portfolio</div>
-                    <div><i class="bi bi-dash-lg fs-1"></i> <i class="bi bi-star-fill fs-1"></i> <i class="bi bi-dash-lg fs-1"></i></div>
+                    <div class="star-divider dark"><i class="bi bi-star-fill fs-1"></i></div>
                 </div>
             </div>
             <div class="row py-4 gy-4">
@@ -62,7 +62,7 @@
             <div class="row pb-4">
                 <div class="col text-center">
                     <div class="text-uppercase fs-3 fw-bold">about</div>
-                    <div><i class="bi bi-dash-lg fs-1"></i> <i class="bi bi-star-fill fs-1"></i> <i class="bi bi-dash-lg fs-1"></i></div>
+                    <div class="star-divider"><i class="bi bi-star-fill fs-1"></i></div>
                 </div>
             </div>
             <div class="row fs-5">
@@ -76,10 +76,10 @@
     </section>
     <section id="contact">
         <div class="container-fluid">
-            <div class="row text-center pt-4">
+            <div class="row pt-4">
                 <div class="col text-uppercase">
-                    <div class="text-uppercase fs-3 fw-bold">contact me</div>
-                    <div class="py-3"><i class="bi bi-dash-lg fs-1"></i> <i class="bi bi-star-fill fs-1"></i> <i class="bi bi-dash-lg fs-1"></i></div>
+                    <div class="text-uppercase fs-3 fw-bold text-center">contact me</div>
+                    <div class="py-3"><div class="star-divider dark"><i class="bi bi-star-fill fs-1"></i></div>
                 </div>
             </div>
             <div class="row pb-4">
