--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 </head>
 
 <body>
+    <!-- header nav bar  -->
     <header>
         <div
             class="container h-100 text-uppercase d-flex justify-content-between align-items-center justify-content-md-around fw-bold">
@@ -26,6 +27,7 @@
             </ul>
         </div>
     </header>
+    <!-- jumbotron section -->
     <section
         class="jumbotron bg-green d-flex flex-column justify-content-center align-items-center text-center text-white py-4 text-uppercase">
         <div class="container-fluid">
@@ -39,6 +41,7 @@
             </div>
         </div>
     </section>
+    <!-- portfolio section -->
     <section id="portfolio" class="d-flex flex-column text-center">
         <div class="container">
             <div class="row">
@@ -47,6 +50,7 @@
                     <div class="star-divider dark"><i class="bi bi-star-fill fs-1"></i></div>
                 </div>
             </div>
+            <!-- images fluid -->
             <div class="row py-4 gy-4">
                 <div class="col-md-6 col-lg-4 image-fluid"><img src="img/cabin.png" alt="pic"></div>
                 <div class="col-md-6 col-lg-4 image-fluid"><img src="img/cake.png" alt="pic"></div>
@@ -57,6 +61,7 @@
             </div>
         </div>
     </section>
+    <!-- about section -->
     <section id="about" class="bg-green text-white py-4">
         <div class="container-fluid">
             <div class="row pb-4">
@@ -73,6 +78,7 @@
                 <div class="col text-capitalize fs-5 clickable"><span class="download"><i class="bi bi-download fw-bold"></i> download</span></div>
             </div>
         </div>
+        <!-- contact form -->
     </section>
     <section id="contact">
         <div class="container-fluid">
@@ -109,8 +115,10 @@
             </div>
         </div>
     </section>
+    <!-- footer -->
     <footer>
         <div class="container-fluid text-white p-0">
+            <!-- footer top responsive -->
             <div class="footer-top bg-blue">
                 <div class="row flex-column flex-md-row justify-content-center text-center">
                     <div class="col col-md-2 pt-4 col-xl-2">
@@ -132,6 +140,7 @@
                     </div>
                 </div>
             </div>
+            <!-- copyright -->
             <div class="footer-bottom d-flex justify-content-center align-items-center">
                 <div class="row">
                     <div class="col">Copyright &copy; Laura Bigoni 2021</div>
