changed a class name

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="col col-md-4 pt-md-4 col-xl-2">
                         <h5 class="text-uppercase">around the web</h5>
-                        <div class="icons pb-4">
+                        <div class="social-icons pb-4">
                             <i class="bi bi-facebook rounded-circle"></i>
                             <i class="bi bi-google rounded-circle"></i>
                             <i class="bi bi-twitter rounded-circle"></i>
